// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component 
  name: "Textarea", placeholder: "Write something..", disabled: false, onChange: "[Function]", value: "Design System", size: "regular"
 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize"
    data-test="DesignSystem-Textarea"
    name="Textarea"
    placeholder="Write something.."
    rows="3"
  >
    Design System
  </textarea>
</DocumentFragment>
`;

exports[`Textarea component 
  name: "Textarea", placeholder: "Write something..", disabled: false, onChange: "[Function]", value: "Design System", size: "small"
 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize Textarea--small"
    data-test="DesignSystem-Textarea"
    name="Textarea"
    placeholder="Write something.."
    rows="3"
  >
    Design System
  </textarea>
</DocumentFragment>
`;

exports[`Textarea component 
  name: "Textarea", placeholder: "Write something..", disabled: true, onChange: "[Function]", value: "Design System", size: "regular"
 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize"
    data-test="DesignSystem-Textarea"
    disabled=""
    name="Textarea"
    placeholder="Write something.."
    rows="3"
  >
    Design System
  </textarea>
</DocumentFragment>
`;

exports[`Textarea component 
  name: "Textarea", placeholder: "Write something..", disabled: true, onChange: "[Function]", value: "Design System", size: "small"
 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize Textarea--small"
    data-test="DesignSystem-Textarea"
    disabled=""
    name="Textarea"
    placeholder="Write something.."
    rows="3"
  >
    Design System
  </textarea>
</DocumentFragment>
`;

exports[`Textarea component size prop snapshot validation matches snapshot for size prop transitions 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize"
    data-test="DesignSystem-Textarea"
    rows="3"
  />
</DocumentFragment>
`;

exports[`Textarea component size prop snapshot validation matches snapshot for size prop transitions 2`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize Textarea--small"
    data-test="DesignSystem-Textarea"
    rows="3"
  />
</DocumentFragment>
`;

exports[`Textarea component size prop snapshot validation matches snapshot for small size basic configuration 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--resize Textarea--small"
    data-test="DesignSystem-Textarea"
    placeholder="Small textarea"
    rows="3"
  />
</DocumentFragment>
`;

exports[`Textarea component size prop snapshot validation matches snapshot for small size with all modifiers 1`] = `
<DocumentFragment>
  <textarea
    class="Textarea Textarea--error Textarea--readOnly Textarea--small"
    data-test="DesignSystem-Textarea"
    name="complex-textarea"
    placeholder="Complex small textarea"
    rows="4"
  />
</DocumentFragment>
`;
